Progress on mod display

--- a/src/app/loadout-builder/filter/LockedArmor2ModIcon.m.scss
+++ b/src/app/loadout-builder/filter/LockedArmor2ModIcon.m.scss
@@ -6,15 +6,40 @@
   margin: 0 4px 4px 0;
 }
 
+.selected {
+  outline: 2px solid #e8a534 !important;
+}
+
 .menu {
+  background-color: #313233;
+  border: 1px solid white;
+  border-radius: 5px;
+  left: -16px;
   position: absolute;
-  display: flex;
-  flex-direction: row;
-  top: -24px;
-  background-color: black;
+  top: -44px;
   z-index: 10;
 }
 
+.buttons {
+  display: flex;
+  flex-direction: row;
+  cursor: pointer;
+}
+
 .button {
-  width: 16px;
+  margin: 4px;
+  padding: 4px;
+}
+
+.pointyBit {
+  background-color: #313233;
+  border-right: 1px solid white;
+  border-bottom: 1px solid white;
+  height: 8px;
+  left: calc(50% - 5.5px);
+  position: absolute;
+  top: calc(100% - 4px);
+  transform: rotate(45deg);
+  width: 8px;
+  z-index: -1;
 }
