--- a/src/app/loadout-builder/filter/LockedArmor2ModIcon.m.scss
+++ b/src/app/loadout-builder/filter/LockedArmor2ModIcon.m.scss
@@ -3,7 +3,9 @@
 }
 
 .mod {
-  margin: 0 4px 4px 0;
+  margin: 0 8px 8px 0;
+  display: flex;
+  flex-direction: row;
 }
 
 .selected {
@@ -49,5 +51,36 @@
     width: 8px;
     transform: rotate(45deg);
     position: absolute;
+  }
+}
+
+.sideButtons {
+  background-color: #313233;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 16px;
+  border: 1px solid #ddd;
+  border-left: none;
+}
+
+.sideButton {
+  cursor: pointer;
+  flex-grow: 1;
+  width: 100%;
+  text-align: center;
+  font-size: 12px;
+  font-weight: 600;
+  border-bottom: 1px solid #ddd;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  > :global(.app-icon) {
+    font-size: 10px;
+  }
+
+  &:last-child {
+    border-bottom: none;
   }
 }
