First cut of mods in loadout drawer

--- a/src/app/loadout/loadout-drawer.scss
+++ b/src/app/loadout/loadout-drawer.scss
@@ -246,8 +246,14 @@
   }
   .sub-bucket.equipped {
     flex: 0;
-    .loadout-item {
-      margin: 0;
+    width: inherit;
+    .equipped-item {
+      display: flex;
+      flex-direction: row;
+
+      .loadout-item {
+        margin: 0;
+      }
     }
   }
 }
